# myLogViewer

./: CMakeLists.txt  MyLogViewer.pro  appwindow.cpp  appwindow.h  logitem.cpp  logitem.h  main.cpp  mainwindow.cpp  mainwindow.h
.circleci/: config.yml
CmakeListsLinux/: CMakeLists.txt
